@@ -10,7 +10,7 @@ using GtkSourceView;
 using MonoDevelop.Components;
 
 using MonoDevelop.Core;
-using MonoDevelop.Core.Properties;
+using MonoDevelop.Core;
 using MonoDevelop.Core.Gui.Dialogs;
 
 using MonoDevelop.Ide.Gui.Content;
